--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   margin: 0 auto;
   max-width: 1200px;
   padding: 50px;
+  border-color: var(--button-bg-color);
+  border-style: dotted;
 }
 
 h1, h2 {
@@ -153,12 +155,25 @@ button:hover {
 }
 
 .header {
-  background-color: var(--primary-color);
+  background-color: var(--item-bg-color);
   display: flex;
   justify-content: center;
   border-color: var(--border-color);
   border-style:groove;
   border-radius: 8px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 75px;
+}
+
+.footer img {
+  width: 50px;
+  height: 50px;
 }
 
 .searchBar {
@@ -182,7 +197,7 @@ button:hover {
 .makePlaylist {
   display: flex;
   justify-content: center;
-  margin-top: 25%;
+  margin-top: 10%;
 }
 
 .homeButton {
