--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,15 @@ button {
   border-style:groove;
 }
 
+input[type="text"], button {
+  font-family: 'Montserrat', sans-serif; /* Ensure Montserrat is being used */
+  font-weight: 700;
+  padding: 12px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 8px;
+}
+
 button img {
   width: 50px;
   height: 50px;
@@ -61,7 +70,7 @@ button:hover {
   bottom: 10px;
   right: 10px;
   width: 300px;
-  background: var(--background-color);
+  background: var(--primary-color);
   border: 1px solid var(--border-color);
   padding: 10px;
   box-shadow: 0 2px 10px var(--border-color);
@@ -174,7 +183,7 @@ button:hover {
 .footer img {
   width: 50px;
   height: 50px;
-  border-radius: 8px;
+  border-radius: 50%;
 }
 
 .searchBar {
