--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #12173d; /* Indigo */
+  --primary-color: #140b24; /* Indigo */
   --button-bg-color: #1DB954; /* Orange */
   --button-hover-bg-color: #23e066; /* Light Orange */
   --background-color: #FFFFFF; /* White */
