--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   margin: 0 auto;
   max-width: 1200px;
-  padding: 50px;
+  padding-left: 10%;
+  padding-right: 10%;
   border-color: var(--button-bg-color);
   border-style: dotted;
 }
@@ -135,6 +136,9 @@ button:hover {
   background-color: var(--primary-color);
   box-shadow: 1px 2px 5px var(--border-color);
   border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items:normal;
 }
 
 @media (max-width: 768px) {
@@ -155,9 +159,10 @@ button:hover {
 }
 
 .header {
-  background-color: var(--item-bg-color);
+  margin-top: 10px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   box-shadow: 1px 2px 5px var(--border-color);
   border-radius: 8px;
 }
@@ -206,12 +211,9 @@ button:hover {
 }
 
 .homeButton {
-  margin-bottom: 10px;
   width: 60px;
   height: 60px;
-  /* box-shadow: 1px 2px 5px var(--border-color); */
-  border-style: dotted;
-  border-color: var(--button-bg-color);
+  margin-right: 10px;
 }
 
 .playPauseButton {
@@ -225,4 +227,19 @@ button:hover {
 
 .playPauseButton:hover {
   background-color: var(--button-hover-bg-color);
+}
+
+@keyframes pulseAnimation {
+  0%, 100% {
+    transform: scale(1);
+    box-shadow: 1px 2px 5px var(--border-color);
+  }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 2px 4px 10px var(--border-color);
+  }
+}
+
+.pulsing {
+  animation: pulseAnimation 2s ease-in-out infinite;
 }
