--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,7 @@
 }
 
 h1, h2 {
-  background-color: var(--item-bg-color);
   border-radius: 8px;
-  box-shadow: 1px 2px 5px var(--border-color);  padding: 10px;
   color: var(--text-color);
 }
 
@@ -72,10 +70,17 @@ button:hover {
   box-shadow: 1px 2px 5px var(--border-color);
 }
 
+.dropdown .trackItem:hover {
+  padding: 10px;
+}
+
+.dropdown .trackItem:hover .featurePopup {
+  display: none;
+}
+
 .dropdown ul {
   list-style: none;
   padding: 0;
-
 }
 
 .dropdown ul li, .search-results div {
@@ -95,13 +100,27 @@ button:hover {
   border-radius: 8px;
   padding: 10px;
   margin-bottom: 10px;
-  transition: background-color 0.3s;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out; /* Transition for height and box-shadow */
   gap: 10px;
   box-shadow: 1px 2px 5px var(--border-color);
 }
 
 .trackItem:hover {
-  background-color: var(--item-hover-bg-color);
+  padding: 20px; /* Increase padding *
+  box-shadow: 3px 6px 10px var(--border-color); /* Increase shadow */
+}
+
+.featurePopup {
+  color: var(--text-color);
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.trackItem:hover .featurePopup {
+  display: flex;
 }
 
 .albumArt {
@@ -138,7 +157,7 @@ button:hover {
   border-radius: 8px;
   display: flex;
   flex-direction: column;
-  align-items:normal;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
@@ -192,6 +211,8 @@ button:hover {
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
   visibility: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .search-results.show {
