--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   max-width: 1200px;
   padding-left: 10%;
   padding-right: 10%;
+  padding-bottom: 10%;
   border-color: var(--button-bg-color);
   border-style: dotted;
 }
