--- a/src/App.css
+++ b/src/App.css
@@ -94,8 +94,16 @@ button:hover {
   margin-top: 10px;
 }
 
-.trackItem {
+.trackInfo {
   display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.trackItem {
+  max-width: 400px;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   background-color: var(--item-bg-color);
   border-radius: 8px;
@@ -159,6 +167,7 @@ button:hover {
 }
 
 .cluster-results {
+  max-width: 600px;
   margin-top: 20px;
   padding: 10px;
   background-color: var(--primary-color);
@@ -223,13 +232,21 @@ button:hover {
   gap: 10px
 }
 
+.searchItem {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .search-results {
+  max-width: 600px;
   margin-top: 10px;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
   visibility: hidden;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .search-results.show {
@@ -326,3 +343,23 @@ button:hover {
   }
 }
 
+.genreResults {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  color: var(--text-color);
+  gap: 10px;
+}
+
+.genreItem {
+  padding: 10px;
+  background-color: var(--item-bg-color);
+  border-radius: 8px;
+  box-shadow: 1px 2px 5px var(--border-color);
+  color: var(--text-color);
+}
+
+.genreItem:hover {
+  box-shadow: 2px 4px 10px var(--border-color);
+  padding: 15px;
+}
