--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ button:hover {
 }
 
 .trackItem {
-  max-width: 400px;
+  gap: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -112,8 +112,17 @@ button:hover {
   position: relative;
   cursor: pointer;
   transition: all 0.3s ease-in-out; /* Transition for height and box-shadow */
-  gap: 10px;
   box-shadow: 1px 2px 5px var(--border-color);
+}
+
+.search-results .trackItem {
+  max-width: 600px;
+  min-width: 600px;
+}
+
+.cluster-results .trackItem {
+  max-width: 600px;
+  min-width: 600px;
 }
 
 .trackItem:hover {
@@ -164,18 +173,17 @@ button:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 
 .cluster-results {
-  max-width: 600px;
-  margin-top: 20px;
-  padding: 10px;
-  background-color: var(--primary-color);
-  box-shadow: 1px 2px 5px var(--border-color);
-  border-radius: 8px;
+  padding: 50px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 1px 2px 5px var(--border-color);
+  border-radius: 8px;
 }
 
 @media (max-width: 768px) {
@@ -226,6 +234,17 @@ button:hover {
   border-radius: 50%;
 }
 
+.searchProcess {
+  margin-top: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  box-shadow: 1px 2px 5px var(--border-color);
+  justify-content: center;
+  align-items: center;
+}
+
 .searchBar {
   display: flex;
   padding: 10px;
@@ -272,8 +291,6 @@ button:hover {
 }
 
 .playPauseButton {
-  margin-left: 10px;
-  padding: 5px 10px;
   background-color: var(--button-bg-color);
   color: var(--subtext-color);
   border-radius: 8px;
@@ -346,8 +363,14 @@ button:hover {
 .genreResults {
   display: flex;
   flex-direction: column;
+  align-items: start;
   margin-top: 10px;
-  color: var(--text-color);
+  border-radius: 8px;
+  box-shadow: 1px 2px 5px var(--border-color);
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 50px;
   gap: 10px;
 }
 
@@ -357,6 +380,12 @@ button:hover {
   border-radius: 8px;
   box-shadow: 1px 2px 5px var(--border-color);
   color: var(--text-color);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.genreItem.selected {
+  background-color: #88864d; /* Change this color as needed */
 }
 
 .genreItem:hover {
